<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_username"
        android:layout_marginTop="154dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <info.hoang8f.widget.FButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        fbutton:buttonColor="@color/MipeTheme.main.attribute"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:text="@string/login_button_login" />
    <info.hoang8f.widget.FButton
        android:id="@+id/loginFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fbutton:buttonColor="@color/MipeTheme.additional.facebook.blue"
        android:textColor="@color/abc_primary_text_material_dark"
        android:text="@string/login_login_with_facebook"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:layout_below="@+id/loginFB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/web_hi_res_512"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
